--- a/geekshop/authapp/templates/authapp/login.html
+++ b/geekshop/authapp/templates/authapp/login.html
@@ -22,9 +22,14 @@
             </div>
         </div>
         <button class="btn btn-round form-control">
-        <a href="{% url 'auth:register' %}" class="">
-            зарегистрироваться
-        </a>
-    </button>
+            <a href="{% url 'social:begin' 'vk-oauth2' %}?next=/" class="">
+                Вход через ВК
+            </a>
+        </button>
+        <button class="btn btn-round form-control">
+            <a href="{% url 'auth:register' %}" class="">
+                зарегистрироваться
+            </a>
+        </button>
     </div>
 {% endblock %}
