--- a/geekshop/geekshop/templates/includes/inc_main_menu.html
+++ b/geekshop/geekshop/templates/includes/inc_main_menu.html
@@ -11,22 +11,36 @@
                         active
                       {% endif %}">контакты</a></li>
         {% if user.is_authenticated %}
-        <li>
-            <a href="{% url 'auth:edit' %}">
-                {{ user.first_name|default:'Пользователь' }}
-            </a>
-        </li>
-            {% if user.is_staff %}
-                <li>
-                    <a href="{% url 'admin_staff:index' %}">админка</a>
-                </li>
-            {% endif %}
+            <li>
+                <div class="dropdown">
+                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                        {{ user.first_name|default:'Пользователь' }}
+                        <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="{% url 'auth:edit' %}">
+                                профиль
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{% url 'order:list' %}">
+                                заказы
+                            </a>
+                        </li>
+                        {% if user.is_staff %}
+                            <li>
+                                <a href="{% url 'admin_staff:index' %}">админка</a>
+                            </li>
+                        {% endif %}
+                        <li><a href="{% url 'auth:logout' %}">выйти</a></li>
+                    </ul>
+                </div> 
+            </li>
         {% endif %}
             <li>
-                {% if user.is_authenticated %}
-                  <a href="{% url 'auth:logout' %}">выйти</a>
-                {% else %}
-                  <a href="{% url 'auth:login' %}">войти</a>
+                {% if not user.is_authenticated %}
+                    <a href="{% url 'auth:login' %}">войти</a>
                 {% endif %}
             </li>
         {% if basket %}
