--- a/geekshop/ordersapp/templates/ordersapp/base.html
+++ b/geekshop/ordersapp/templates/ordersapp/base.html
@@ -17,7 +17,10 @@
     {% endblock %}
 
     {% block js %}
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="{% static 'js/jquery.formset.js' %}"></script>
+        <script src="{% static 'js/orders-script.js' %}"></script>
     {% endblock %}
 </head>
 <body>
