--- a/geekshop/ordersapp/templates/ordersapp/order_detail.html
+++ b/geekshop/ordersapp/templates/ordersapp/order_detail.html
@@ -1,26 +1,25 @@
 {% extends "ordersapp/base.html" %}
 {% load static %}
-{% load my_tags %}
 
 {% block content %}
    {% include 'ordersapp/includes/inc_order_summary.html' %}
    <div class="basket_list">
        {% for item in object.orderitems.select_related %}
            <div class="basket_record">
-               <img src="{{ item.product.image|media_folder_products }}"
+               <img src="/media/{{ item.product.image }}"
                     alt="{{ item.product.short_desc }}">
                <span class="category_name">
                    {{ item.product.category.name }}
                </span>
                <span class="product_name">{{ item.product.name }}</span>
                <span class="product_price">
-                   {{ item.product.price }}&nbspруб
+                   {{ item.product.price }}&nbsp;руб
                </span>
                <span class="product_quantitiy">
                    x {{ item.quantity }} шт.
                </span>
                <span class="product_cost">
-                    = {{ item.get_product_cost }}&nbspруб
+                    = {{ item.get_product_cost }}&nbsp;руб
                </span>
            </div>
        {% endfor %}
